# short

./: .gitignore  Cargo.toml  LICENSE
.cargo/: config.toml
assets/: index.html
docs/: DB.md
src/: aka.rs  main.rs
src/aka/: constants.rs
