[package]
name = "short"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"]}
axum = {version = "0.6", features = ["macros"]}
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.22", features = ["full"] }
tower = { version = "0.4", features = ["util", "limit"] }
rusqlite = { version = "0.28", features = ["bundled"] }
tokio-rusqlite = "0.3"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
rand = "0.8"
regex = "1.7"
urlencoding = "2.1"
http = "0.2"
log = "0.4"
bytes = "1.3"
tower-http = { version = "0.3", features = ["cors", "compression-gzip"] }
env_logger = "0.10.0"


[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
